2025/03/14 HourlyAggregation and DailyAggregation not consistent - done.